--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,6 +1,5 @@
 <div class="page-header">
     <h1>
-        Hi {{main.username}}, form world
-        >>{{main.bookinglist()}}
+        Hi {{main.username}}, form world >>{{main.bookinglist()}}
     </h1>
 </div>
