--- a/public/app/views/pages/users/login.html
+++ b/public/app/views/pages/users/login.html
@@ -2,10 +2,10 @@
     <div class="page-header">
         <h2>User Login</h2>
     </div>
-    <form ng-submit="main.dologin(loginData);">
+    <form ng-submit="main.dologin(loginData);" autocomplete="off">
         <div class="form-group">
             <label for="exampleInputEmail1">Username</label>
-            <input type="text" class="form-control" name="username" aria-describedby="emailHelp" placeholder="Enter Username" ng-model="main.loginData.username">
+            <input type="text" class="form-control" autocomplete="off" name="username" aria-describedby="emailHelp" placeholder="Enter Username" ng-model="main.loginData.username">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
