--- a/public/asset/css/main.css
+++ b/public/asset/css/main.css
@@ -1,11 +1,273 @@
-main{
+main {
     padding: 30px;
 }
-header .navbar{
-    border-radius:0px;
+
+.m {
+    padding: 58px;
 }
-.show-hide-message.ng-hide-remove{
+
+header .navbar {
+    border-radius: 0px;
+}
+
+.show-hide-message.ng-hide-remove {
     -webkit-animation: zoomIn 0.3s both ease;
-    -moz-animation:zoomIn 0.3s both ease;
-    animation:zoomIn both ease;
+    -moz-animation: zoomIn 0.3s both ease;
+    animation: zoomIn both ease;
+}
+
+.navbar {
+    border-radius: 0px;
+}
+
+a>.profileicon {
+    height: 25px;
+}
+
+.dropdown-menu>li>a:hover {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+    background: rgb(173, 173, 173);
+}
+
+.dropdown-menu>li {
+    margin-top: -4px;
+    margin-bottom: 4px;
+}
+
+
+/* 
+-------------------------------------registration
+*/
+
+.panel-primary>.panel-heading {
+    color: #fff;
+    background-color: #607D8B;
+    border-color: #607D8B;
+}
+
+.panel-primary {
+    border-color: #607D8B;
+}
+
+.main-container {
+    margin-top: -18px;
+}
+
+.uname {
+    font-size: 13px;
+    color: #fff !important;
+}
+
+.dte {
+    margin-top: -17px;
+    color: #fff;
+    padding-left: 43px;
+}
+
+.pwd {
+    left: -29px;
+}
+
+.genpwd {
+    margin-left: -46px;
+}
+
+table,
+tr td {
+    border: 1px solid #a98a8a0d;
+}
+
+tbody {
+    display: block;
+    height: 250px;
+    overflow: auto;
+}
+
+thead,
+tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+}
+
+thead {
+    width: calc( 100% - 1em)
+}
+
+table {
+    width: 400px;
+}
+
+.th-label {
+    text-align: left;
+    background-color: #ebebeb;
+}
+
+.table>tbody>tr>td.icount {
+    width: 6%;
+    text-align: center;
+    background-color: #ebebeb;
+    border-top: 1px solid #ddd0;
+}
+
+ul>li>a {
+    font-weight: 700 !important;
+}
+
+
+/* total rows */
+
+.totalrows {
+    margin-right: 153px;
+    margin-top: 19px;
+    font-weight: 700;
+}
+
+span {
+    font-weight: 700;
+}
+
+.custom-pwd {
+    width: 179px;
+}
+
+.genbutton {
+    margin-top: -54px;
+    margin-left: 182px;
+}
+
+.passwordinfo {
+    margin-top: -20px;
+}
+
+.inactive {
+    color: red;
+    background-color: #ebebeb;
+}
+
+.active {
+    /* background-color: red; */
+    color: dimgrey;
+}
+
+.table>tbody>tr>td {
+    background-color: #ffffff;
+    border-top: 1px solid #ddd0;
+}
+
+.table>tbody>tr>td.active {
+    background-color: #ffffff;
+    border-top: 1px solid #ddd0;
+}
+
+
+/* chart */
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id] li:nth-child(0) {
+    color: blue;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id] li:nth-child(1) {
+    color: #4d00ff;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id] li:nth-child(2) {
+    color: #9900ff;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id] li:nth-child(3) {
+    color: #e500ff;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id] li:nth-child(4) {
+    color: #ff00cc;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id] li:nth-child(5) {
+    color: #ff0080;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id] li:nth-child(6) {
+    color: #ff0033;
+}
+
+
+/* line 26, ../sass/pizza.scss */
+
+ul[data-pie-id] {
+    list-style: none;
+    padding: 10px;
+}
+
+[data-pie-id='my-cool-chart'] li:nth-child(0) {
+    color: #d84200;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id='my-cool-chart'] li:nth-child(1) {
+    color: #fc4d00;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id='my-cool-chart'] li:nth-child(2) {
+    color: #ff6420;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id='my-cool-chart'] li:nth-child(3) {
+    color: #ff7d44;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id='my-cool-chart'] li:nth-child(4) {
+    color: #ff9668;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id='my-cool-chart'] li:nth-child(5) {
+    color: #ffaf8b;
+}
+
+
+/* line 20, ../sass/pizza.scss */
+
+[data-pie-id='my-cool-chart'] li:nth-child(6) {
+    color: #ffc8af;
 }
