--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,4 +1,4 @@
-<div class="page-header">
+<div class="page-header" ng-module="main.isloggedIn">
     <h1>
         Hi {{main.username}}, form world >>{{main.bookinglist()}}
     </h1>
