--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -9,26 +9,20 @@
     <meta name="author" content="">
     <!-- <link rel="icon" href="../../../../favicon.ico"> -->
     <title>Stat</title>
-
-    <!-- font-awesome -->
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css"> -->
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="asset/css/bootstrap.min.css">
-    <link rel="stylesheet" href="asset/css/main.css">
     <script src="asset/js/jquery-3.3.1.min.js"></script>
+    <link href="asset/css/bootstrap.min.css" rel="stylesheet">
     <script src="asset/js/bootstrap.min.js"></script>
+    <script src="asset/js/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="asset/css/jquery-ui.css" />
+    <script src="asset/js/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="asset/css/main.css">
     <script src="asset/js/custom.js"></script>
-
-
-
     <!-- Custom styles for this template -->
     <script src="asset/js/clck.js"></script>
-
     <script src="asset/js/angular.js"></script>
     <script src="asset/js/angular-route.js"></script>
     <script src="asset/js/angular-animate.js"></script>
     <!-- </script>ript src="asset/js/angular-animate.js"></script> -->
-
     <!-- data tables -->
     <script src="asset/dtables/ui-bootstrap-tpls.min.js"></script>
     <script src="asset/dtables/angular-ui-utils.min.js"></script>
@@ -201,9 +195,12 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+
+
     <div class="container-fluid main-container">
         <div ng-view></div>
     </div>
+
 </body>
 
 </html>
