--- a/public/asset/css/main.css
+++ b/public/asset/css/main.css
@@ -44,6 +44,10 @@ a>.profileicon {
     margin-bottom: 4px;
 }
 
+li.dropdown>a {
+    cursor: pointer;
+}
+
 
 /* 
 -------------------------------------registration
